# sonia

./: .gitignore  AGENTS.md  README.md  backlog  backlog.md  main.py  notes.md  pyproject.toml  todo
misc/: code_review_20251120.md  code_review_20251206_bigpickle.md  example.db  sqlite-migration.md
skills/tester/: SKILL.md
skills/tester/scripts/: check.sh
src/note/: __init__.py  __main__.py  commands.py  console_output.py  main.py  notedb.py
src/sonia/: __init__.py  __main__.py  commands.py  console_output.py  main.py  notedb.py
src/sonia/test/: test_commands.py  test_notedb.py
test/: test_commands.py  test_notedb.py
test/sonia/: test_notedb.py
tools/: completions.py
