[project]
name = "note"
version = "0.3.5"
description = "Simple note capture"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "duckdb",
    "mypy>=1.18.2",
    "pytest>=9.0.1",
    "rich>=14.2.0",
    "ruff>=0.14.6",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
note = "note.main:main"
