[project]
name = "sonia"
version = "0.3.8"
description = "Simple note capture"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "duckdb",
    "rich>=14.2.0",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-x"

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "ruff>=0.14.8",
    "ty>=0.0.1a31",
]

[project.scripts]
sonia = "sonia.main:main"
